--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -13,6 +13,7 @@ Imports:
     dplyr,
     assertthat,
     sf,
+    ggplot2,
     RColorBrewer
 Maintainer: Jose Martinez <joseramon@geografiafisica.org>
 Description:
@@ -23,3 +24,5 @@ License: GPL-3
 Encoding: UTF-8
 LazyData: true
 RoxygenNote: 7.1.0
+Suggests: 
+    testthat
