--- a/NAMESPACE
+++ b/NAMESPACE
@@ -2,6 +2,8 @@
 
 S3method(plot,transect)
 S3method(read_transect,character)
+S3method(read_transect,sf)
+export(create_transect)
 export(read_transect)
 import(ggplot2)
 importFrom(RColorBrewer,brewer.pal)
@@ -9,7 +11,15 @@ importFrom(RColorBrewer,brewer.pal.info)
 importFrom(assertthat,assert_that)
 importFrom(dplyr,arrange)
 importFrom(magrittr,"%>%")
+importFrom(sf,st_cast)
 importFrom(sf,st_centroid)
 importFrom(sf,st_coordinates)
+importFrom(sf,st_crs)
+importFrom(sf,st_geometry)
 importFrom(sf,st_geometry_type)
+importFrom(sf,st_line_sample)
+importFrom(sf,st_multilinestring)
 importFrom(sf,st_read)
+importFrom(sf,st_sf)
+importFrom(sf,st_sfc)
+importFrom(zoo,zoo)
