--- a/NAMESPACE
+++ b/NAMESPACE
@@ -11,6 +11,8 @@ importFrom(RColorBrewer,brewer.pal.info)
 importFrom(assertthat,assert_that)
 importFrom(dplyr,arrange)
 importFrom(magrittr,"%>%")
+importFrom(magrittr,`%>%`)
+importFrom(sf,`st_crs<-`)
 importFrom(sf,st_cast)
 importFrom(sf,st_centroid)
 importFrom(sf,st_coordinates)
@@ -18,6 +20,7 @@ importFrom(sf,st_crs)
 importFrom(sf,st_geometry)
 importFrom(sf,st_geometry_type)
 importFrom(sf,st_line_sample)
+importFrom(sf,st_linestring)
 importFrom(sf,st_multilinestring)
 importFrom(sf,st_read)
 importFrom(sf,st_sf)
